--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 /*CSS for about About.me */
 body {
-	background: url();
+	background: url(assets/header_bg.jpg);
+	background-size: cover;
 	text-align: center;
 	color: green;
 }
@@ -8,8 +9,10 @@ header {
 	text-align: center;
 }
 img {
-	border-radius: 10px;
-	padding: 10px 0px 0px 10px;
+	size: 300px;
+	border-radius: 20px;
+	margin: 75px;
+	border: 9px solid white;
 	position: center;
 }
 h1 {
