--- a/style.css
+++ b/style.css
@@ -1,25 +1,52 @@
 /*CSS for about About.me */
 body {
-	background: url(assets/header_bg.jpg);
-	background-size: cover;
 	text-align: center;
-	color: green;
+	color: black;
+	font-style: italic;
 }
 header {
 	text-align: center;
+	background: url(assets/dusk_sky.jpeg);
+	background-size: cover;
+	border: 10px rgba(125, 195, 250, 0.7);
+	border-radius: 10px;
 }
 img {
-	size: 300px;
 	border-radius: 20px;
-	margin: 75px;
-	border: 9px solid white;
-	position: center;
+	margin: 15px;
+	border: 9px solid black;
+	position: relative;
+}
+
+article {
+	margin: 0 auto;
+	max-width: 620px;
+	font-size: 15px;
+}
+.pitbulls {
+	background: url(assets/layla_shay.jpeg);
+	float: left;
+	width: 400px;
+	background-size: cover;
+	border-radius: 8px;
+	border: 10px solid black;
+	color: white;
+	font-size: 23px;
+	position: absolute;
 }
 h1 {
-	color: green;
-	size: 35px;
+	color: rgba(50,150,175,0.5);
+	font-size: 45px;
+	font-family: Verdana;
 }
 p {
-	size: 100px;
+	font-size: 20px;
 	text-align: center;
+}
+div {
+	font-size: 25px;
+	margin: 40px;
+	height: 350px;
+	max-width: 400;
+	border-radius: 8px;
 }
